--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ html {
     font-size: 10px;
 }
 
+h1{
+    font-size: 4rem;
+    font-weight: bold;
+}
+
 p {
     font-size: 1.8rem;
     line-height: 1.5;
@@ -51,6 +56,12 @@ body {
     grid-column: span 14;
 }
 
+.shadow {
+    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+} 
+
 #announcement-bar {
     background-color: var(--black);
     text-align: center;
@@ -65,6 +76,7 @@ body {
 
 header {
     background-color: var(--green);
+    border-bottom: 1px solid var(--brown);
     height: max-content;
     display: grid;
     grid-template-columns: minmax(0px, 1fr) repeat(4, minmax(0, 270px)) minmax(0px, 1fr);
@@ -74,7 +86,7 @@ header {
 #header-phone {
     grid-column: 2 / span 1;
     justify-self: left;
-    align-self: center;
+    align-self:flex-start;
 }
 
 #header-phone > a {
@@ -83,7 +95,10 @@ header {
     font-size: 2rem;
     background-color: var(--brown);
     padding: 1rem;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
+
+    display: inline-flex;
+    text-align: right;
 }
 
 #header-phone > a > svg {
@@ -96,8 +111,33 @@ header {
     justify-self: center;
     align-self: center;
     margin: 1.5rem;
-    max-width: 400px;
+    max-width: 375px;
 }
+
+#banner {
+    position: relative;
+}
+
+#banner-text {
+    display: inline-flex;
+    align-items: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 250px;
+    padding: 1rem;
+    color: var(--white);
+    line-height: 1.5;
+    border: 2px solid var(--white);
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, .4);
+}
+
+#brand-logo {
+    max-width: 175px;
+    margin-right: 2rem;
+}
+
 main {
     grid-column: 2 / 3;
     display: grid;
@@ -109,10 +149,7 @@ main {
     grid-column: span 12;
     background-color: var(--green);
     text-align: center;
-    /**
-    -webkit-box-shadow: 4px 4px 4px -2px rgb(0 0 0 / .2);
-    -moz-box-shadow: 4px 4px 4px -2px rgb(0 0 0 / .2); **/
-    box-shadow: 0 6px 10px 2px rgba(0, 0, 0, .2);
+    border-radius: 5px;
 }
 
 #heading > h2 {
